# python-template

./: README.md  dev-requirements.txt  pyproject.toml
libs/base/: pyproject.toml
libs/fancy/: pyproject.toml  requirements.txt
